--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "codemirror": "^5.42.0",
+    "comment-json": "^1.1.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "highcharts": "^6.2.0",
